<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.filterlocation.FilterLocationFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:importantForAccessibility="no"
        android:padding="8dp"
        android:src="@drawable/arrow_back_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_vacancy_location_title"
        style="@style/h3_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/filter_location_fragment"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textlayout_vacancy_country"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        android:hint="@string/country"
        android:gravity="center_vertical"
        android:textColorHint="@color/gray_B4"
        app:hintTextColor="?attr/colorOnPrimary"
        app:endIconDrawable="@drawable/arrow_forward_ic"
        app:endIconMode="custom"
        app:endIconTint="?attr/colorOnPrimary"
        app:boxStrokeWidth="0dp"
        android:inputType="none"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_top">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_vacancy_country"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingBottom="0dp"
            android:focusable="false"
            android:background="?attr/colorPrimary"
            android:textAppearance="@style/p_text_style" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textlayout_vacancy_region"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        android:hint="@string/region"
        android:gravity="center_vertical"
        android:textColorHint="@color/gray_B4"
        app:hintTextColor="?attr/colorOnPrimary"
        app:endIconDrawable="@drawable/arrow_forward_ic"
        app:endIconMode="custom"
        app:endIconTint="?attr/colorOnPrimary"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:inputType="none"
        app:layout_constraintTop_toBottomOf="@id/textlayout_vacancy_country">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_vacancy_region"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingBottom="0dp"
            android:background="?attr/colorPrimary"
            android:textAppearance="@style/p_text_style" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
