<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.filterregion.FilterRegionFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:importantForAccessibility="no"
        android:padding="8dp"
        android:src="@drawable/arrow_back_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_filter_settings_fragment_title"
        style="@style/h3_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/filter_region_fragment"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="64dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        style="@style/SearchEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/edit_text_bg"
        android:drawableTint="@color/main_black_22"
        android:inputType="text"
        app:counterEnabled="false"
        app:cursorColor="@color/main_blue_E7"
        app:endIconMode="custom"
        app:endIconTint="@color/main_black_22"
        app:hintEnabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_top"
        app:shapeAppearanceOverlay="@style/shape_appearance">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/edit_text_search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/search_edittext_hint"
            android:imeOptions="actionDone"
            android:onTextChanged="@{viewmodel.onSearchTextChanged}"
            android:singleLine="true"
            android:text="@={viewmodel.searchTextState}"
            android:textColor="@color/main_black_22"
            android:textColorHint="?customHintColor"
            android:textCursorDrawable="@drawable/edit_text_cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        tools:listitem="@layout/region_list_item"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout" />

    <LinearLayout
        android:id="@+id/layout_error"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_horizontal_margin"
            android:adjustViewBounds="true"
            android:src="@drawable/empty_results_cat" />

        <TextView
            android:id="@+id/text_error"
            style="@style/h3_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="46dp"
            android:layout_marginTop="@dimen/placeholder_title_margin_vertical"
            android:gravity="center"
            android:text="@string/region_does_not_exist" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
